# MNE-MCP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  README.zh-CN.md  TOOLS_REFERENCE.md  TOOLS_REFERENCE.zh-CN.md  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: mne-methodology-critic.md
docs/: INSTALL.docx  INSTALL.md  INTRODUCTION.docx  INTRODUCTION.md  USAGE.docx  USAGE.md
paper/: MNE-MCP_paper.md  MNE-MCP_论文_APA7.docx  apa7_polish.py  make_figure1.py  make_figure2_loop.py  make_figure3_skills.py  make_figure4_berger.py  make_figure5_casestudy.py
scripts/: install.ps1  install.sh
skills/: MNE_ANALYSIS_SUITE.md
skills/mne-advanced/: SKILL.md
skills/mne-advanced/references/: advanced-methods.md
skills/mne-analyst/: SKILL.md
skills/mne-analyst/references/: failure-patterns.md  mne-mcp-tools.md  mne-pipelines.md
skills/mne-artifacts/: SKILL.md
skills/mne-artifacts/references/: artifact-methods.md
skills/mne-connectivity/: SKILL.md
skills/mne-connectivity/references/: connectivity-methods.md
skills/mne-decoding/: SKILL.md
skills/mne-decoding/references/: decoding-methods.md
skills/mne-erp/: SKILL.md
skills/mne-erp/references/: erp-methods.md
skills/mne-mcp-guard/: SKILL.md
skills/mne-mcp-guard/references/: failure-patterns.md
skills/mne-mcp-setup/: SKILL.md
skills/mne-methodology-critic/: SKILL.md
skills/mne-methodology-critic/references/: methodology-checklist.md
skills/mne-preprocess/: SKILL.md
skills/mne-preprocess/references/: preprocess-methods.md
skills/mne-source/: SKILL.md
skills/mne-source/references/: source-methods.md
skills/mne-spectral/: SKILL.md
skills/mne-spectral/references/: spectral-methods.md
skills/mne-stats/: SKILL.md
skills/mne-stats/references/: stats-methods.md
skills/mne-timefreq/: SKILL.md
skills/mne-timefreq/references/: timefreq-methods.md
skills/mne-writeup/: SKILL.md
skills/mne-writeup/references/: writeup-guide.md
src/mne_mcp/: __init__.py  _compat.py  backend.py  claude_config.py  cli.py  config.py  figures.py  kernel.py  operations.py  server.py  summaries.py  wizard.py
tests/: smoke_eegbci.py  smoke_pipeline.py  test_backend.py  test_claude_config.py  test_cli.py  test_client_config.py  test_config.py  test_kernel.py  test_lightweight.py  test_operations.py  test_operations_more.py  test_regressions.py  test_server.py  test_wizard.py
